Wed Dec 26 12:03:37 2001  George Lebl <jirka@5z.com>

	* panel-gconf.c: fix default return for get_string

	* nothing.cP: a bit more evil was required here

Tue Dec 25 16:13:56 2001  George Lebl <jirka@5z.com>

	* nothing.cP: some more evil

Tue Dec 25 15:51:27 2001  George Lebl <jirka@5z.com>

	* gnome-run.c, nothing.cP, nothing.h: Since I suppose one shouldn't
	  be productive during christmass to not seem like a loser, I wasn't
	  actually productive.  GEGLs ARE INVADING!

	* menu.c: cosmetic change

Mon Dec 24 01:55:19 2001  George Lebl <jirka@5z.com>

	* panel.c, panel-util.[ch]: deal with dropped uris a tad better and
	  actually use gnome-vfs more.  Still kind of stupid and needs more
	  work, but better then before.  We should now again handle drops
	  from the menus since those were not from a 'file:' uri's.  Also
	  drop the shell quoting routine since we already have that in glib.

	* panel-widget.c: a bit of constization

Sat Dec 22 23:12:54 2001  George Lebl <jirka@5z.com>

	* Makefile.am, foobar-widget.c, gnome-panel-screenshot.c, panel.c,
	  session.c: Compile with G_DISABLE_DEPRECATED and
	  GNOME_DISABLE_DEPRECATED

Sat Dec 22 17:14:50 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c, menu.[ch], main.c: redo how the updating of
	  icons and tearoffs keys is done, load the foobar items in the
	  deffered way as well and sanitize this whole bit somewhat more.
	  It now fully nicely updates when you set/unset the icons/tearoff
	  keys.  And without having to reread folders.

	* gnome-panel-properties.c, gnome-run.c, launcher.c,
	  menu-properties.c, menu.c, panel-config.c, swallow.c:
	  Make dialog window settings sane after mucking with them.

	* gnome-panel-screenshot.c: get rid of tempnam usage to avoid warning

Sat Dec 22 15:12:42 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c, gnome-run.c, panel-config.c, swallow.c: fix up
	  the size request stuff so we get back some widgets which
	  disappeared because I was a wanker.
