@@ -1,3 +1,11 @@
+Wed Dec 26 14:01:24 2001  George Lebl <jirka@5z.com>
+
+	* foobar-widget.c: fix width of clock label.  Now if the time
+	  'grows' beyond initial size then the label grows as well (it never
+	  shrinks horizontally though, unless you change the format)
+
+	* nothing.cP: we need pause
+
 Wed Dec 26 12:03:37 2001  George Lebl <jirka@5z.com>
 
 	* panel-gconf.c: fix default return for get_string
